--- a/site/package.json
+++ b/site/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.x"
+    "body-parser": "^1.9.0",
+    "ejs": "^1.0.0",
+    "express": "^4.9.5",
+    "nedb": "^0.11.1"
   }
 }
