--- a/controller-pi/package.json
+++ b/controller-pi/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "nrf": "~0.8.2",
-    "nedb": "~0.11.1"
+    "nedb": "~0.11.1",
+    "firebase": "~1.1.2"
   }
 }
