--- a/site/package.json
+++ b/site/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.9.0",
     "ejs": "^1.0.0",
     "express": "^4.9.5",
+    "firebase": "^1.1.2",
     "nedb": "^0.11.1"
   }
 }
